Colaboratory를 통해 생성됨

--- a/210525_데이터 인코딩.ipynb
+++ b/210525_데이터 인코딩.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "210525_데이터 인코딩.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMqDG1/Oj5W5VwxXwDyF1yP",
+      "authorship_tag": "ABX9TyPWB6+aSlOTyHJTrc2PeoDm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +31,296 @@
       "cell_type": "code",
       "metadata": {
         "id": "F5IhmMk-IejX"
+      },
+      "source": [
+        "# 데이터 전처리(Data Pre-Processing)\n",
+        "# Garbage in, Garbage out\n",
+        "# 데이터 클린징, 결손값 처리, 데이터 인코딩 (문자열 => 숫자형)\n",
+        "# 데이터 스케일링, 이상치 제거, ...\n",
+        "\n"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2l38F2AUJ_mR"
+      },
+      "source": [
+        "# 레이블 인코딩(Label Encoding)\n",
+        "\n",
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "\n",
+        "items = ['TV', '냉장고', '전자레인지', '컴퓨터', '선풍기', '선풍기', '믹서', '믹서']\n",
+        "\n"
+      ],
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0SL45hygKlU6",
+        "outputId": "5e050564-54f2-496f-fbd3-2fa61aa19269"
+      },
+      "source": [
+        "# 객체 생성 => fit() => transform()\n",
+        "\n",
+        "encoder = LabelEncoder()\n",
+        "encoder.fit(items)\n",
+        "labels = encoder.transform(items)\n",
+        "\n",
+        "print(labels)\n",
+        "\n",
+        "\n",
+        "# 인코딩 값 확인\n",
+        "print(encoder.classes_)\n",
+        "\n",
+        "# 디코딩 값 확인\n",
+        "print(encoder.inverse_transform([4,5,2,0,1,1,3]))w"
+      ],
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[0 1 4 5 3 3 2 2]\n",
+            "['TV' '냉장고' '믹서' '선풍기' '전자레인지' '컴퓨터']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uGbb2NpeKp35",
+        "outputId": "c1dc3d6f-bf63-45ab-dd05-2c9329fbbf55"
+      },
+      "source": [
+        "# 원-핫 인코딩(One-Hot Encoding)\n",
+        "# 문자열 값 => 숫자형 값\n",
+        "\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "\n",
+        "items = ['TV', '냉장고', '전자레인지', '컴퓨터', '선풍기', '선풍기', '믹서', '믹서']\n",
+        "\n",
+        "labels = labels.reshape(-1, 1)\n",
+        "print(labels)"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[[0]\n",
+            " [1]\n",
+            " [4]\n",
+            " [5]\n",
+            " [3]\n",
+            " [3]\n",
+            " [2]\n",
+            " [2]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gydHh6dlNOhD",
+        "outputId": "f48dbeb7-9407-4b00-b325-bf0f40abb285"
+      },
+      "source": [
+        "o_h_encoder = OneHotEncoder()\n",
+        "o_h_encoder.fit(labels)\n",
+        "o_h_labels = o_h_encoder.transform(labels)\n",
+        "o_h_labels.toarray()\n"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 0., 0., 0., 0., 0.],\n",
+              "       [0., 1., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 1., 0.],\n",
+              "       [0., 0., 0., 0., 0., 1.],\n",
+              "       [0., 0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 0., 1., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0., 0.],\n",
+              "       [0., 0., 1., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        },
+        "id": "sO7L2ElKOHhs",
+        "outputId": "65527f78-fec3-48aa-95c2-b4a5e3601904"
+      },
+      "source": [
+        "# get_dummies() : 문자열 => 숫자형 바꾸는 작업\n",
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "item_df = pd.DataFrame({'item':['TV', '냉장고', '전자레인지', '컴퓨터', '선풍기', '선풍기', '믹서', '믹서'] })\n",
+        "pd.get_dummies(item_df)\n"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>item_TV</th>\n",
+              "      <th>item_냉장고</th>\n",
+              "      <th>item_믹서</th>\n",
+              "      <th>item_선풍기</th>\n",
+              "      <th>item_전자레인지</th>\n",
+              "      <th>item_컴퓨터</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   item_TV  item_냉장고  item_믹서  item_선풍기  item_전자레인지  item_컴퓨터\n",
+              "0        1         0        0         0           0         0\n",
+              "1        0         1        0         0           0         0\n",
+              "2        0         0        0         0           1         0\n",
+              "3        0         0        0         0           0         1\n",
+              "4        0         0        0         1           0         0\n",
+              "5        0         0        0         1           0         0\n",
+              "6        0         0        1         0           0         0\n",
+              "7        0         0        1         0           0         0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "teOpCW2bPdAF"
       },
       "source": [
         ""
